Bug 507346 - "Private" YouTube playlist fails to play without error message displayed to the user
Summary: "Private" YouTube playlist fails to play without error message displayed to t...
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 1.4.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-22 08:37 UTC by Philipp Kiemle
Modified: 2025-08-07 16:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philipp Kiemle 2025-07-22 08:37:27 UTC
SUMMARY
Attepting to play a YouTube playlist with its access policy set to "private" fails silently, with no indication to the user about what went wrong.

STEPS TO REPRODUCE
1. Have a YouTube playlist that is set to "private" (only accessible by the account that created it)
2. Click on "Open URL" in Haruna, paste the URL in the text field and hit Enter/press "Open"

OBSERVED RESULT
Nothing happens, not even a "loading" animation that stops after some time - just nothing.

EXPECTED RESULT
An error message appears, stating that there was a problem playing the content of the URL that was entered, maybe even with basic troubleshooting steps if the exact reason of the failure can be easily determined.

SOFTWARE/OS VERSIONS
Haruna Version: 1.4.0 (Flatpak)
Operating System: Kubuntu 25.04 (Kubuntu Backports PPA enabled)
KDE Plasma Version: 6.3.6
KDE Frameworks Version: 6.14.0
Qt Version: 6.8.3
Kernel Version: 6.14.0-24-generic (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-6700K CPU @ 4.00GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: Z170-Gaming K3

ADDITIONAL INFORMATION
Once I change the access policy of the playlist to "Public" or "Unlisted" (aka only accessible if you know the link), everything works as expected.
Comment 1 george fb 2025-08-07 16:56:50 UTC
Git commit 3d5f689a76d2cba006d6d065753debb3fefe2bc3 by George Florea Bănuș.
Committed on 07/08/2025 at 16:55.
Pushed by georgefb into branch 'master'.

youtube: show error when failing to get playlist

M  +18   -4    src/youtube.cpp

https://invent.kde.org/multimedia/haruna/-/commit/3d5f689a76d2cba006d6d065753debb3fefe2bc3