youtube: show error when failing to get playlist

BUG: 507346